# 42sh

./: Makefile.am  configure.ac
src/: 42sh.c  Makefile.am
src/assigner/: Makefile.am  assigner.h  assigner_func.c  assigner_var.c
src/ast/: Makefile.am  ast_create_1.c  ast_create_2.c  ast_create_3.c  ast_evaluate_1.c  ast_evaluate_2.c  ast_evaluate_3.c  ast_free_1.c  ast_free_2.c  ast_free_3.c
src/ast/includes/: ast.h  ast_create.h  ast_evaluate.h  ast_free.h
src/builtin/: Makefile.am  builtin.c  builtin.h  builtin_cd.c  builtin_dot.c
src/expander/: Makefile.am  expander.c  expander.h
src/io/: Makefile.am  io.c  io.h
src/lexer/: Makefile.am  lexer.c  lexer.h  token.h
src/linked_list/: Makefile.am  linked_list.c  linked_list.h
src/parser/: Makefile.am  parser.c  parser.h
src/string_list/: Makefile.am  string_list.c  string_list.h
tests/: functions.sh  testsuite.sh
tests/fix/: test_fix.sh
tests/fix/step1/: big_args.sh  fix_echo.sh  step1.sh  two_args.sh  unterminated_quotes.sh
tests/fix/step1/files/: test_un_quotes.sh
tests/fix/step2/: step2.sh
tests/step1/: step1.sh
tests/step1/files/: test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  tiger.sh
tests/step1/sub_tests/: builtin.sh  echo_test.sh  error_test.sh  file_test.sh  if_else_test.sh
tests/step2/: step2.sh
tests/step2/files/: test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test_echo_backslash.sh  test_redir1.sh  test_redir2.sh  test_redir3.sh  test_redir4.sh  var_1  var_2  var_3  var_4  var_5  var_6  var_special
tests/step2/sub_tests/: andor_test.sh  echo_test.sh  expander.sh  loop.sh  negation.sh  pipeline.sh  redirections.sh  variables.sh
tests/step3/: step3.sh
tests/step3/files/: break1.sh  break2.sh  break3.sh  break4.sh  comsub1.sh  comsub2.sh  comsub3.sh  comsub4.sh  con1.sh  con2.sh  con3.sh  con4.sh
tests/step3/files/funcdec/: funcdec_1.sh  funcdec_2.sh  funcdec_3.sh  funcdec_4.sh  funcdec_5.sh
tests/step3/files/test_cd/: test_cd_1.sh  test_cd_2.sh  test_cd_3.sh  test_cd_4.sh  test_cd_5.sh
tests/step3/files/test_exit/: test_exit_1.sh
tests/step3/sub_tests/: break_test.sh  cd.sh  command_block.sh  comsub.sh  dot_test.sh  exit.sh  export.sh  funcdec.sh  unset.sh
tests/step3/sub_tests/dot_tests/: test_redir_1  test_redir_2
tests/step4/: step4.sh
tests/step4/files/: a  beteuXL.sh  caca.sh  error.sh  tata  test
tests/step4/sub_tests/: case.sh
