# Name of the libaries
lib_LIBRARIES = libexpander.a

# List of file to compile in libexpander.a
libexpander_a_SOURCES = expander.c \
                      expander.h

libexpander_a_CPPFLAGS = -I$(top_srcdir)/src

libexpander_a_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic

noinst_LIBRARIES = libexpander.a

