# Name of the libaries
lib_LIBRARIES = liblinked_list.a

# List of file to compile in liblinked_list.a
liblinked_list_a_SOURCES = linked_list.c \
                      linked_list.h

liblinked_list_a_CPPFLAGS = -I$(top_srcdir)/src

liblinked_list_a_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic

noinst_LIBRARIES = liblinked_list.a

