# Name of the libaries
lib_LIBRARIES = libstring_list.a

# List of file to compile in liblinked_list.a
libstring_list_a_SOURCES = string_list.c \
                      string_list.h

libstring_list_a_CPPFLAGS = -I$(top_srcdir)/src

libstring_list_a_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic

noinst_LIBRARIES = libstring_list.a

